--- a/app/src/main/res/layout/activity_click_maraton.xml
+++ b/app/src/main/res/layout/activity_click_maraton.xml
@@ -10,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/settings_toolbar"
+        android:layout_below="@+id/carrera_toolbar"
         android:layout_alignParentStart="true">
 
         <RelativeLayout
@@ -184,4 +184,8 @@
                 android:textSize="14sp" />
         </RelativeLayout>
     </ScrollView>
+
+    <include
+        android:id="@+id/carrera_toolbar"
+        layout="@layout/app_bar_layout"></include>
 </RelativeLayout>
