--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,37 +50,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         app:srcCompat="@drawable/logo" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/facebook_signin_button"
-            android:layout_width="80dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/facebook" />
-
-        <ImageView
-            android:id="@+id/twitter_signin_button"
-            android:layout_width="105dp"
-            android:layout_height="85dp"
-            android:layout_marginLeft="10dp"
-            android:src="@drawable/twitter" />
 
 
         <ImageView
             android:id="@+id/google_signin_button"
             android:layout_width="70dp"
             android:layout_height="55dp"
-            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/textView2"
             android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
             android:src="@drawable/google" />
 
-    </LinearLayout>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
