--- a/app/src/main/res/layout/activity_maraton.xml
+++ b/app/src/main/res/layout/activity_maraton.xml
@@ -3,30 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MaratonActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/maraton_conteiner"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/marathon_page_toolbar"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/all_maratons_post_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/maraton_toolbar"
-            android:layout_alignParentStart="true">
+            android:layout_marginTop="-1dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/all_maraton_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
+        <com.mancj.materialsearchbar.MaterialSearchBar
+            android:id="@+id/material_search_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/all_maratons_post_list"
+            android:layout_marginBottom="8dp"
+            app:mt_hint="Enter Maraton Name"
+            app:mt_maxSuggestionsCount="50" />
+    </LinearLayout>
 
-        <include
-            android:id="@+id/maraton_toolbar"
-            layout="@layout/app_bar_layout"></include>
-
-    </RelativeLayout>
+    <include
+        android:id="@+id/marathon_page_toolbar"
+        layout="@layout/app_bar_layout"></include>
 
 
 </RelativeLayout>
