--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/update_account_settings_button"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:layout_below="@id/settings_peso"
+                android:layout_below="@id/setradGroup"
                 android:layout_margin="20dp"
                 android:background="@drawable/button"
                 android:text="Update Account Settings"
@@ -28,6 +28,49 @@
                 android:textColor="@color/colorAccent"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/settings_edad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/settings_country"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/inputs"
+                android:hint="Edad"
+                android:padding="12dp"
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:id="@+id/setuplinegenero"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/setup_peso">
+
+                <TextView
+                    android:id="@+id/titlegroup"
+                    android:layout_width="130dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:ems="10"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="10dp"
+                    android:text="Genero: "
+                    android:textSize="20dp" />
+
+                <TextView
+                    android:id="@+id/setting_genero"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:ems="10"
+                    android:paddingRight="10dp"
+                    android:text=""
+                    android:textSize="20dp" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/settings_status"
@@ -89,35 +132,30 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/settings_genero"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/settings_country"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/inputs"
-                android:hint="Genero"
-                android:padding="12dp"
-                android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
-                android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/settings_edad"
-                android:layout_width="match_parent"
+            <RadioGroup
+                android:id="@+id/setradGroup"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/settings_genero"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="6dp"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/inputs"
-                android:hint="Edad"
-                android:padding="12dp"
-                android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+                android:layout_below="@+id/settings_peso"
+                android:layout_centerHorizontal="true">
+
+                <RadioButton
+                    android:id="@+id/setradMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:onClick="checkButton"
+                    android:text="Masculino" />
+
+                <RadioButton
+                    android:id="@+id/setradFeMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:onClick="checkButton"
+                    android:text="Femenino" />
+            </RadioGroup>
 
             <EditText
                 android:id="@+id/settings_estatura"
