--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -18,6 +19,7 @@
             android:id="@+id/click_maraton_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginBottom="15dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop" />
 
@@ -75,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:id="@+id/contact_maraton"
             android:paddingBottom="5dp">
 
             <TextView
@@ -100,20 +103,11 @@
                 android:textSize="12sp" />
         </LinearLayout>
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/maraton_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Marathon Name"
-                android:textAlignment="center"
-                android:textColor="@color/colortitle"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -147,8 +141,18 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/maraton_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Marathon Name"
+                android:textAlignment="center"
+                android:textColor="@color/colortitle"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
