--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/profile_icon"
@@ -11,17 +9,22 @@
         android:icon="@drawable/home"
         android:title="Pagina de Inicio" />
     <item
-        android:id="@+id/nav_marathon"
+        android:id="@+id/nav_mi_marathon"
         android:icon="@drawable/friends"
-        android:title="Mis Carreras" />
+        android:title="Mis Resultados" />
+    <item
+        android:id="@+id/nav_mi_inscripcion"
+        android:icon="@drawable/friends"
+        android:title="Mis Proximas Carreras" />
+
     <item
         android:id="@+id/nav_find_marathon"
         android:icon="@drawable/friends"
         android:title="Buscar Carreras" />
     <item
-        android:id="@+id/nav_settings"
+        android:id="@+id/nav_ayuda"
         android:icon="@drawable/settings"
-        android:title="Configuraciones de Perfil" />
+        android:title="Ayuda" />
     <item
         android:id="@+id/nav_Logout"
         android:icon="@drawable/logout"
